--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@tailwindcss/postcss": "^4.1.18",
     "@tailwindcss/vite": "^4.1.18",
     "framer-motion": "^12.29.0",
@@ -22,7 +23,8 @@
     "react-i18next": "^16.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.12.0",
-    "swiper": "^12.0.3"
+    "swiper": "^12.0.3",
+    "vite-plugin-imagemin": "^0.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
